--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     </p>
 
     <h1>
-        Hackathon
+        Hackathon 
+    </h1>
+
+    <h1>
+        My name is VINAY TYAGI
     </h1>
 </body>
 </html>
