--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>
         My name is VINAY TYAGI
 
-        tyagi branch commit
+        tyagi branch 2 commit
     </h1>
 </body>
 </html>
